Fixed extra space in li

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -196,7 +196,7 @@ ul {
 .gallery li {
 	float: left;
 	margin: 0 0 20px 20px;
-	padding: 10px 10px 6px 10px;
+	padding: 10px;
 	background-color: #fff;
 	border: 1px solid #d2d1ce;
 	border-bottom-color: #d2d1ce;
@@ -232,6 +232,7 @@ ul {
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
+	vertical-align: top;
 }
 
 /*-------- post.html -------- */
